refactoring: fixed some sonar violation